LPD-48902 Assert object entries are deleted after their group is removed from the accepted list